test_regress/t/t_pp_underline_bad.out
%Error: t/t_pp_underline_bad.v:7: Extra underscore in meta-comment; use /*verilator {...}*/ not /*verilator_{...}*/
%Error: t/t_pp_underline_bad.v:7: Unknown verilator comment: /*verilator _no_inline_module*/
%Error: Exiting due to
